"fixed the alignment of the content that the user enters"

--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,6 @@
     max-height: 1500px;
     max-width: 92%;
     overflow: hidden;
+    align-self: center;
 }
-
 /* End of ToDo list */
